# AILabs

./: .gitignore
agent-governance-toolkit-demo/: demo.ipynb
autogen-101/: main.py
autogen-reflection/: agent.py  autogen-testbed.py
az-ml/: ai-gateway-endpoint-rest-2-mcp.ipynb  component-pipeline.ipynb  config.ipynb  consume-online-endpoint-with-aad-token.ipynb  consume-online-endpoint.ipynb  create_compute_cluster.ipynb  create_endpoint.ipynb  data-explore.ipynb  pipeline.ipynb  register-model-from-local.ipynb  swagger.json  train.ipynb  train_in_the_cloud.ipynb
azure-ai-search/: agent_foundryiq.ipynb  agentic-retrieval-101.ipynb  keyword-search.ipynb  search-101.py  vector-search.ipynb
azure-content-understanding/: 00_config_defaults.ipynb  00_configue_defaults.py  01_sample_analyze_binary.ipynb  02_sample_analyze_url.ipynb  03_sample_analyze_video.ipynb  04_sample_analyze-audio.ipynb  05_sample_analyze_image.ipynb  06_custom_analyzer.ipynb  07_array_field.ipynb  08_list_analyzer.ipynb  09_delete_analyzer.ipynb  10_debug_prebuild_analyzer_fields.ipynb  11_get_analyzer.ipynb
azure-doc-intelligence/: doc-101.ipynb  doc-custom-forms.ipynb  doc-prebuild-model.ipynb
azure-openai-client/: client.py
content-safty/: blocklist.ipynb
foundry-agent/: agent.ipynb  hosted-agent.ipynb
foundry-test/: requirements.txt  test.ipynb
gen-image-app/: app.py  rednote-cover.py  refer-image.py
vector-learning/: pyproject.toml  vector_learning.py
vector-learning/__marimo__/session/: vector_learning.py.json
vector-learning/chroma_db/: chroma.sqlite3
(+18 files in other folders)
