[project]
name = "vector-learning"
version = "0.1.0"
description = "Learning vector databases with ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.9.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ipython>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]